--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "dist": "git add ./dist/*"
   },
   "pre-commit": [
-    "build"
+    "build",
+    "dist"
   ],
   "devDependencies": {
     "babel-core": "^6.26.0",
